removing unnecessary comments, formatting it to english and including website preview on readme

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   padding: 0 2rem;
 
-  // altura total menos cabeçalho
+  // total height - heading
   height: calc(100vh - 5rem);
 
   display: flex;
